# simple_units

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  example.cpp  test.cpp  units.hpp
example/: example.cpp
include/simple_units/: unit.hpp
test/: test.cpp
